<resources>
    <string name="app_name">emlearn-android</string>

    <string name="top_delay">延迟:</string>
    <string name="top_net">网络:</string>
    <string name="top_room_number">房间号:</string>

    <string name="user_name">用户名</string>
    <string name="title_name">教育 Demo</string>
    <string name="version_company">本产品由环信提供 当前版本 1.4.1</string>

    <string name="roomName">房间名称</string>
    <string name="roomType">房间类型</string>
    <string name="roomPassword">房间密码</string>

    <string name="chat_zone">聊天区</string>
    <string name="oper_zone">学生列表</string>
    <string name="oper_name">姓名</string>
    <string name="oper_writeborad">白板</string>
    <string name="oper_chat">消息</string>
    <string name="oper_audio">语音</string>
    <string name="oper_video">视频</string>
    <!-- 录音 -->
    <string name="normal">按住 说话</string>
    <string name="recording">松开 结束</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="shouzhishanghua">手指上滑，取消发送</string>
    <string name="tooshort">录音时间过短</string>
    <string name="toolong">录音时间过长</string>
</resources>