<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/lay_oper_list"
        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:orientation="horizontal"
                            android:background="#ffffff"
                            android:gravity="center_vertical"
                            android:id="@+id/layout_student_list_column_name"
                            >
                            <TextView
                                android:id="@+id/tv_name"
                                android:layout_width="0dp"
                                android:layout_weight="0.3"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:gravity="center"
                                android:text="@string/oper_name"/>
                            <RelativeLayout
                                android:layout_width="0dp"
                                android:layout_weight="0.2"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/black"
                                    android:gravity="center"
                                    android:layout_centerVertical="true"
                                    android:text="@string/oper_writeborad"/>
                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="0dp"
                                android:layout_weight="0.2"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/black"
                                    android:gravity="center"
                                    android:layout_centerVertical="true"
                                    android:text="@string/oper_audio"/>
                            </RelativeLayout>
                            <RelativeLayout
                                android:layout_width="0dp"
                                android:layout_weight="0.2"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/oper_video"
                                    android:textColor="@color/black" />
                            </RelativeLayout>
                        </LinearLayout>
                        <ListView
                            android:id="@+id/oper_list"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                    </LinearLayout>