<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_top_container"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:background="@color/common_top_bar_bg_blue"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_room_number"
                    android:textColor="@color/colorMain"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/mainTopRoomName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="15dp"
                    android:text="12345"
                    android:textColor="@color/colorMain"
                    android:textSize="14dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_time" />

                <TextView
                    android:id="@+id/mainTopRoomTime"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="00:00:00"
                    android:textColor="@color/common_gray_light"
                    android:textSize="12dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_delay"
                    android:textColor="@color/common_gray_light"
                    android:visibility="gone"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tv_delay"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="10ms"
                    android:textColor="@color/common_top_bar_blue"
                    android:visibility="gone"
                    android:textSize="14dp" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                        </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:gravity="center"
                    >
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:gravity="center_vertical"
                            android:background="@drawable/shape_gray_radius30"
                            android:paddingTop="3dp"
                            android:paddingBottom="3dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/top_net"
                                    android:textColor="@color/common_gray_light"
                                    android:paddingRight="10dp"
                                    android:textSize="12dp" />

                                <ImageView
                                    android:id="@+id/mainTopNetwork"
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:background="@mipmap/ic_net_sign"/>

                        </LinearLayout>
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:paddingLeft="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

<!--                        <ImageView-->
<!--                            android:id="@+id/img_setting"-->
<!--                            android:layout_width="30dp"-->
<!--                            android:layout_height="30dp"-->
<!--                            android:layout_marginRight="5dp"-->
<!--                            android:visibility="gone"-->
<!--                            android:background="@color/common_gray"-->
<!--                            android:src="@drawable/file" />-->

<!--                        <ImageView-->
<!--                            android:id="@+id/img_log"-->
<!--                            android:layout_width="30dp"-->
<!--                            android:layout_height="30dp"-->
<!--                            android:layout_marginRight="5dp"-->
<!--                            android:visibility="gone"-->
<!--                            android:src="@drawable/main_leave" />-->

                        <ImageView
                            android:id="@+id/mainTopUpload"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:src="@mipmap/ic_upload" />
                        <ImageView
                            android:id="@+id/mainTopClose"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_close" />
                </LinearLayout>
        </LinearLayout>
</RelativeLayout>